--- a/braitenberg/.vscode/settings.json
+++ b/braitenberg/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Monokai Dimmed",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
