--- a/modcon/.vscode/settings.json
+++ b/modcon/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Monokai",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
